# opi-wiki

./: .baltimore-lab-app.toml  .dockerignore  .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE-CONTENT.md  MAINTAINERS.md  README.md  STYLE.md  Taskfile.yml  docker-compose.yml  fly.toml  main.py  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  report-an-error.yml  suggest-an-edit.yml
.github/workflows/: ci.yml  deploy-pages-test.yml  deploy.yml
docs/: .metadata.yml  .pages  index.cards.yml  index.md
docs/_data/: people.yml
docs/about-us/: .metadata.yml  .pages  index.cards.yml  index.md  mission-vision-identity.md  operating-principles-and-culture.md
docs/about-us/about-opi/: .metadata.yml  .pages  index.cards.yml  index.md  mission-vision-identity.md  operating-frame.md  operating-principles-and-culture.md  org-structure.data.yml  org-structure.md  teams-programs-foundations.md
docs/about-us/letters-from-the-director/: .metadata.yml  .pages  index.cards.yml  index.md  on-admin-ops.md  on-cross-agency-delivery.md  on-innovation-and-civic-design.md  on-opi-foundations.md  on-performance-management.md  on-trustworthy-data.md
docs/about-us/our-teams/: .metadata.yml  .pages  index.cards.yml  index.md  team-and-roles.md
docs/assets/stylesheets/: base.css  breadcrumbs.css  components.css  fonts.css  home.css  material-chrome.css  opi.css  org-chart.css  tokens.css
docs/how-we-work/: .metadata.yml  .pages  how-work-moves-through-opi.md  index.cards.yml  index.md  org-structure.md
docs/how-we-work/administrative-memos/: essential-and-emergency-essential-designations.md  index.md  media-and-press-engagement.md  responding-to-city-council-requests.md  telework-and-in-office-schedule.md
docs/how-we-work/handbook/: .metadata.yml  .pages  index.md
docs/how-we-work/how-to/: add-a-printer.md  book-the-idea-lab-fayette.md  create-planner-groups-without-automatic-member-alerts.md  edit-a-past-reporting-period-in-book-of-business.md  git-guide.md  index.md  order-food-catering-from-city-vendors.md  silence-teams-notifications-while-sharing-your-screen.md  submit-your-weekly-update.md
docs/how-we-work/onboarding/: .metadata.yml  index.md  managers-onboarding-playbook.md  maps-benefits-quick-guide.md  new-hire-announcement-template.md  new-hire-orientation-guide.md  offboarding-process-and-checklist.md  onboarding-process-and-checklist.md
docs/how-we-work/operations/: .metadata.yml  .pages  charter-template.md  index.cards.yml  index.md  intake-sop.md  leadership-norms.md  performance-standards-manager-companion.md  performance-standards-staff.md  problem-statement-template.md  productivity-and-collaboration-playbook.md  qa-standards.md  sharepoint-operating-system-strategy.md
docs/how-we-work/organization/: .metadata.yml  .pages  index.md  org-structure.data.yml  org-structure.md
docs/how-we-work/services/: .pages  admin-ops.md  citywide-performance-management.md  cross-agency-delivery.md
docs/how-we-work/team-and-roles/: .metadata.yml  .pages  index.cards.yml  index.md  staff-directory.md
docs/our-teams/: .metadata.yml  .pages  index.cards.yml  index.md
docs/our-teams/cross-agency-delivery/: .metadata.yml  about-cross-agency-delivery.md  cross-agency-delivery-theory-of-change.md  index.md
docs/our-teams/data-and-analytics/: .pages  about-data-analytics.md  data-analytics-strategy.md  data-analytics-theory-of-change.md  data-governance-framework.md  index.md
docs/our-teams/directors-office/: .pages  about-admin-ops.md  admin-ops-strategy.md  admin-ops-theory-of-change.md  index.cards.yml  index.md
docs/our-teams/innovation-lab/: .pages  about-innovation-lab.md  index.cards.yml  index.md  (+5 more)
docs/products/: .metadata.yml  index.md
docs/programs/: .pages  index.md
docs/public/: .metadata.yml  .pages  citistat-public-brief.md  data-analytics-public-brief.md  index.cards.yml  index.md  innovation-lab-public-brief.md  website-copy-master.md  website-information-architecture.md
docs/resources/: .metadata.yml  .pages  contributing.cards.yml  contributing.md  index.cards.yml  index.md
docs/what-we-do/: .metadata.yml  .pages  how-to-engage-opi.md  index.md
notes/: BACKLOG.md  README.md  glossary-retired-terms.md  wiki-quality-review-april-2026.md
notes/public-archive/: README.md  data-analytics-public-brief.md  innovation-lab-public-brief.md  website-copy-master.md
notes/reviews/: SYNTHESIS.md  SYNTHESIS2.md  audit_content.md  audit_reference.md  review2_consistency.md  review2_editor.md  review2_funder.md  review2_partner.md  review2_staff.md  review2_storyteller.md  review_funder.md  review_partner.md  review_staff.md  review_storyteller.md
overrides/: .gitkeep  main.html
overrides/partials/: header.html  source.html
scripts/: __init__.py  check_accessibility_smoke.py  check_brand_terms.py  check_browser_smoke.py  check_built_links.py  check_cli.py  check_consistency.py  check_hosted_ci_policy.py  check_html_links.py  check_page_metadata.py  check_publication_boundary.py  check_style.py  cleanup_doc_headers.py  install-hooks.sh  security_snyk.sh  verify.py  verify.sh
scripts/hooks/: pre-push
scripts/repo_tools/: __init__.py  accessibility.py  badges.py  brand_terms.py  browser_smoke.py  built_links.py  cards.py  consistency.py  data.py  header_cleanup.py  hosted_ci_policy.py  html_links.py  metadata.py  org_structure.py  page_header.py  people.py  publication.py  redirects.py  style.py  taskfile_graph.py  workflow_policy.py
tests/: helpers.py  test_accessibility.py  test_badges.py  test_brand_terms.py  test_browser_smoke.py  test_built_links.py  test_cards.py  test_check_cli.py  test_cleanup_doc_headers_cli.py  test_consistency.py  test_data.py  test_header_cleanup.py  test_hosted_ci_policy.py  test_html_links.py  test_main.py  test_metadata.py  test_navigation_structure.py  test_org_structure.py  test_page_header.py  test_people.py  test_publication.py  test_redirects.py  test_style.py  test_validator_clis.py  test_verify.py
(+301 files in other folders)
