[project]
name = "opi-wiki"
version = "0.1.0"
description = "A Wiki for all things OPI."
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
  "mkdocs==1.6.1",
  # Held on the 9.6.x line on purpose: Material 9.7+ prints a build-time advisory
  # pushing migration to ProperDocs (an ecosystem fork). Stay on the stable,
  # warning-free MkDocs 1.x stack until that settles.
  "mkdocs-material==9.6.23",
  "mkdocs-awesome-pages-plugin==2.10.1",
  "mkdocs-macros-plugin==1.5.0",
  # Pinned at 1.2.2 on purpose: 1.2.3 swaps its dependency from `mkdocs` to
  # `properdocs` (the same fork), which injects advocacy warnings into builds.
  "mkdocs-redirects==1.2.2",
  "pymdown-extensions==10.21.3",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "ruff (>=0.15.20,<0.16.0)",
    "playwright (>=1.61.0,<2.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["main.py", "scripts", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "BLE"]
