[project]
name = "opi-wiki"
version = "0.1.0"
description = "A Wiki for all things OPI."
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
  "mkdocs==1.6.1",
  # Held on the 9.6.x line on purpose: Material 9.7+ prints a build-time advisory
  # pushing migration to ProperDocs (an ecosystem fork). Stay on the stable,
  # warning-free MkDocs 1.x stack until that settles.
  "mkdocs-material==9.6.23",
  "mkdocs-awesome-pages-plugin==2.10.1",
  "mkdocs-macros-plugin==1.5.0",
  # Pinned at 1.2.2 on purpose: 1.2.3 swaps its dependency from `mkdocs` to
  # `properdocs` (the same fork), which injects advocacy warnings into builds.
  "mkdocs-redirects==1.2.2",
  "pymdown-extensions==10.21.3",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "ruff (>=0.15.12,<0.16.0)",
    "playwright (>=1.58.0,<2.0.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "types-pyyaml (>=6.0.12.20260518,<7.0.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["main.py", "scripts", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "BLE", "D", "UP"]
ignore = ["D202"]

# D202 is excluded on purpose: the house style separates a docstring from the
# body with one blank line, consistently, across the whole codebase.
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Small pure helpers in check scripts read clearly without docstrings.
"scripts/check_built_links.py" = ["D103"]
"scripts/check_consistency.py" = ["D103"]

[tool.mypy]
files = ["main.py", "scripts"]
strict = true
# Tests exercise fakes and fixtures; strict typing there adds noise, not safety.
exclude = ["tests/"]

# check_* scripts import check_cli bare when run as `python scripts/check_x.py`
# (with scripts/ on sys.path) and as scripts.check_cli when imported. mypy only
# sees the package form; ignore the bare-module fallback.
[[tool.mypy.overrides]]
module = "check_cli"
ignore_missing_imports = true

